--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-a
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biblioteche di Roma</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        :root {
+            --primary: #970a2c;
+        }
+    </style>
+</head>
+<body class="bg-gray-100">
+    <!-- Fascia bianca superiore -->
+    <div class="bg-white h-[1.7cm] flex justify-between items-center px-4">
+        <img src="roma.png" alt="Logo Roma" title="Questo link si apre in una nuova finestra" class="h-[1.5cm]">
+        <div class="flex space-x-4 items-center">
+            <img src="search.svg" alt="Cerca" title="Cerca nel catalogo delle biblioteche di Roma" class="h-6 cursor-pointer">
+            <img src="facebook.svg" alt="Facebook" title="Questo link si apre in una nuova finestra" class="h-6 cursor-pointer">
+            <img src="instagram.svg" alt="Instagram" title="Questo link si apre in una nuova finestra" class="h-6 cursor-pointer">
+            <img src="x.svg" alt="X" title="Questo link si apre in una nuova finestra" class="h-6 cursor-pointer">
+            <img src="youtube.svg" alt="YouTube" title="Questo link si apre in una nuova finestra" class="h-6 cursor-pointer">
+        </div>
+    </div>
+
+    <!-- Fascia amaranto -->
+    <div class="bg-[var(--primary)] h-[6cm] flex justify-center items-center space-x-16">
+        <a href="https://www.bibliotechediroma.it/opac/.do">
+            <img src="logobianco.png" alt="Logo Bianco" class="h-[5cm]">
+        </a>
+        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2">
+            <img src="logomorante.png" alt="Logo Morante" class="h-[5cm]">
+        </a>
+    </div>
+
+    <!-- Footer -->
+    <footer class="bg-[var(--primary)] h-[2.7cm] flex justify-between items-center px-4 text-white text-sm">
+        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2">
+            <img src="footermorante.png" alt="Footer Morante" class="h-[2cm]">
+        </a>
+        <div class="text-right">
+            <p>Via Adolfo Cozza 7<br>Municipio X, 00121 Roma</p>
+            <p>06 4546 0481 / 0483</p>
+            <p>Lunedì-Venerdì 09:00-18:30 | Sabato 09:00-13:00</p>
+        </div>
+    </footer>
+</body>
+</html>
