--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <img src="/roma.png" alt="Logo Roma" title="Questo link si apre in una nuova finestra">
             </div>
             <div class="right-icons">
-                <img src="/search.svg" alt="Cerca" title="Cerca nel catalogo delle biblioteche di Roma">
+                <img src="search.svg" alt="Cerca" title="Cerca nel catalogo delle biblioteche di Roma">
                 <img src="/api/placeholder/24/24" alt="Facebook" title="Questo link si apre in una nuova finestra">
                 <img src="/api/placeholder/24/24" alt="Instagram" title="Questo link si apre in una nuova finestra">
                 <img src="/api/placeholder/24/24" alt="X" title="Questo link si apre in una nuova finestra">
@@ -71,10 +71,10 @@
         </div>
         <div class="bottom-band">
             <a href="https://www.bibliotechediroma.it/opac/.do">
-                <img src="/logobianco.png" alt="Logo Bianco">
+                <img src="logobianco.png" alt="Logo Bianco">
             </a>
             <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2">
-                <img src="/logomorante.png" alt="Logo Morante">
+                <img src="logomorante.png" alt="Logo Morante">
             </a>
         </div>
     </header>
