--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <header>
         <div class="top-band">
             <div class="logo-container">
-                <img src="/roma.png" alt="Logo Roma" title="Questo link si apre in una nuova finestra">
+                <img src="roma.png" alt="Logo Roma" title="Questo link si apre in una nuova finestra">
             </div>
             <div class="right-icons">
                 <img src="search.svg" alt="Cerca" title="Cerca nel catalogo delle biblioteche di Roma">
