--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             align-items: center;
         }
         .logo-bianco {
-            height: 70px; /* Ridotto da 94px */
+            height: 80px; /* Ridotto da 94px */
             width: auto;
             object-fit: contain;
         }
         .logo-morante {
-            height: 170px; /* Aumentato significativamente */
+            height: 160px; /* Aumentato */
             width: auto;
             object-fit: contain;
         }
