--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
             </div>
         </div>
         <div class="bottom-band">
-            <a href="https://www.bibliotechediroma.it/opac/.do" target="_blank" title="Questo link si apre in una nuova finestra" class="logo-link">
+            <a href="https://www.bibliotechediroma.it/opac/.do" target="_blank" class="logo-link">
                 <img src="logobianco.png" alt="Logo Bianco" class="logo-bianco">
             </a>
-            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank" title="Questo link si apre in una nuova finestra" class="logo-link">
+            <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank" class="logo-link">
                 <img src="logomorante.png" alt="Logo Morante" class="logo-morante">
             </a>
         </div>
