--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header Layout</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <style>
         :root {
             --primary: #970a2c;
