--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 .footer-logo {
     margin-right: auto;
-    margin-left: 1rem; /* Reduced from 2rem to bring logo more towards center */
+    margin-left: 2rem; /* Aumentato da 1rem a 2rem per spostare il logo più verso il centro */
 }
 
 .footer-logo img {
@@ -111,7 +111,7 @@
     align-items: center;
     gap: 3rem;
     margin-left: auto;
-    margin-right: 1rem; /* Reduced from 2rem to bring info section more towards center */
+    margin-right: 2rem; /* Aumentato da 1rem a 2rem per spostare le informazioni più verso il centro */
 }
 
 .info-item {
