--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@
         }
 
 /* Updated footer styles */
+/* Updated footer styles */
 .footer {
     height: 2.7cm;
     background-color: var(--primary);
     display: flex;
-    justify-content: space-between; /* Distribuisce lo spazio tra gli elementi */
+    justify-content: space-between;
     align-items: center;
-    padding: 0 4rem; /* Aumenta il padding per dare più spazio ai lati */
+    padding: 0 2rem;
     color: white;
     margin-top: auto;
 }
 
 .footer-logo {
-    flex: 1; /* Permette al logo di occupare spazio disponibile */
-    display: flex;
-    justify-content: flex-start; /* Allinea il logo a sinistra */
+    margin-right: auto;
+    margin-left: 1rem; /* Reduced from 2rem to bring logo more towards center */
 }
 
 .footer-logo img {
@@ -108,11 +108,11 @@
 }
 
 .footer-info {
-    flex: 2; /* Permette alle informazioni di occupare più spazio */
     display: flex;
-    justify-content: center; /* Centra le informazioni */
     align-items: center;
-    gap: 3rem; /* Spazio tra gli elementi delle informazioni */
+    gap: 3rem;
+    margin-left: auto;
+    margin-right: 1rem; /* Reduced from 2rem to bring info section more towards center */
 }
 
 .info-item {
