--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     }
 
         .logo-bianco {
+            display: block;
             height: 70px;
             width: auto;
             object-fit: contain;
@@ -190,6 +191,8 @@
     
     /* Increased logo size in crimson band */
     .logo-bianco {
+        margin-top: 1rem; /* Aggiungi spazio sopra il logo */
+        margin-bottom: 1rem; /* Aggiungi spazio sotto il logo */
         height: 70px;  /* Increased from 60px */
     }
 
