--- a/index.html
+++ b/index.html
@@ -155,6 +155,11 @@
         }
         
         @media (max-width: 768px) {
+
+            .top-band {
+                padding: 0 0.5rem 0 0.2rem; /* Ridotto il padding sinistro */
+            }
+            
             .logo-morante {
                 display: none;
             }
