--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             height: 100%;
             width: 100%;
             overflow-x: hidden;
+            font-family: "Space Grotesk", sans-serif;
+            font-weight: 400;
         }
         
         body {
