--- a/index.html
+++ b/index.html
@@ -247,9 +247,12 @@
             </a>
         </div>
     </header>
+    
     <main>
-        <!-- Contenuto della pagina -->
+        <p>Consulta gli orari di apertura della Biblioteca Elsa Morante:</p>
+        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=Orario,31/12/2025" target="_blank" class="orari-link">Orari di apertura</a>
     </main>
+    
     <footer class="footer">
         <div class="footer-logo">
             <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" target="_blank">
