--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     
     <main>
         <p>Consulta gli orari di apertura della Biblioteca Elsa Morante:</p>
-        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#:~:text=Orario,31/12/2025" target="_blank" class="orari-link">Orari di apertura</a>
+        <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" target="_blank" class="orari-link">Orari di apertura</a>
     </main>
     
     <footer class="footer">
