--- a/index.html
+++ b/index.html
@@ -250,8 +250,9 @@
     
 <main>
     <p>Consulta gli orari di apertura della Biblioteca Elsa Morante:</p>
-<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2" 
-   onclick="setTimeout(() => { window.open(this.href + '#where_openings', '_blank'); return false; }, 100)">
+<a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" 
+   target="_blank" 
+   class="orari-link">
    Orari di apertura
 </a>
 </main>
