--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
     <p>Consulta gli orari di apertura della Biblioteca Elsa Morante:</p>
 <a href="https://www.bibliotechediroma.it/opac/library/Biblioteca%20Elsa%20Morante/RMBO2#where_openings" 
    target="_blank" 
+   rel="noopener noreferrer" 
    class="orari-link">
    Orari di apertura
 </a>
